# vic-exposure-site-alert

./: .gitignore  CHANGELOG.md  Pipfile  README.md  data_fetcher.py  data_parser.py  example.config.json  make_dir.py  setup.cfg  vic_exposure_site_alert.py  vic_exposure_site_schedule.py
vic_exposure_site_alert/: __init__.py  alert.py  cli.py  utils.py  vic_exposure_site_alert.py
