[metadata]
name = vic_exposure_site_alert
version = 0.3.0
author = Claudine Chionh
description = Filtered Victorian Covid-19 exposure site alerts
long_description = file: README.md
license = GPL-3.0-or-later

[options]
packages = vic_exposure_site_alert

[options.entry_points]
console_scripts =
    exposure-alert = vic_exposure_site_alert:cli
